# folio-api

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  THIRD-PARTY.md  config.json  config.json.example  config.logging-file.json.example  config.logging-stdout-json.json.example  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  railway.json  run.sh
.claude/: RESUME.md  bootup.json
.planning/: CONTINUATION.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: entity-graph-visual-polish.md
.planning/prod-snapshot-2026-05-19/: 0001-1fd309b-connections-route-fix.patch  prod-git-log.txt  prod-uncommitted-tracked.diff  prod-untracked-analytics.py.txt  prod-untracked-folio_api-x.txt
.planning/prod-snapshot-2026-07-02/: prod-analytics.py  prod-live-drift-2026-07-02.txt
.planning/research/: swimlane-layout-research.md
benchmarks/: llm_search_benchmark.py
docker/: Caddyfile  Caddyfile.dev  Dockerfile  run.sh
docs/: banner.txt  conf.py  index.md
docs/plans/: 2026-03-15-001-fix-search-missing-preflabel-matching-plan.md  2026-07-02-001-chore-deploy-entity-graph-to-prod-plan.md
folio_api/: __init__.py  api.py  rate_limit.py
folio_api/models/: __init__.py  health.py  owl.py
folio_api/rendering/: __init__.py  html_formatter.py
folio_api/routes/: connections.py  explore.py  info.py  properties.py  root.py  search.py  taxonomy.py
folio_api/templates/: basic_html.py  copy_iri.js  cytoscape_graph.js  (+1 more)
tests/: conftest.py  test_app_starts.py  test_rate_limit.py  test_static_cache.py
(+62 files in other folders)
